Fix text align on temp page.

--- a/styles.css
+++ b/styles.css
@@ -1002,6 +1002,7 @@ iframe {
     background-color: rgba(0, 0, 0, 0.63);
     color: white;
     padding: 1%;
+    text-align: center;
 }
 
 .temporaire h1 {
